--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<h1>Lavanya Gopal</h1>
 					<p>Fellow at <a href="https://headstarter.co/">headstarter</a> | enthusiastic learner | Undergrad student</p>
 				</header>
+				<img src:"C:\Users\Lavan\OneDrive\Desktop\LAV_PIC.jpg">
 				<div class="container">
 					<ul class="actions special">
 						<li><a href="#one" class="button primary scrolly">Begin</a></li>
@@ -29,12 +30,12 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/pic01.jpg" alt="lavanya" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I am Lavanya Gopal, an undergraduate student from India with a keen interest in AI, ML, and web development. As an enthusiastic learner, I am always eager to explore new technologies and broaden my skill set. My passion for innovation and problem-solving drives me to seek out opportunities that allow me to grow and make meaningful contributions. With a solid foundation in these fields, I am dedicated to advancing my knowledge and expertise, while looking for exciting opportunities to apply my skills and make a positive impact.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -43,28 +44,28 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src=""C:\Users\Lavan\OneDrive\Pictures\portfolio\pic1.jpg"" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Stuff I do</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>As a tech enthusiast and student I love trying many innovative things. Below are few </p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<span class="fa fa-terminal fa-3x"></span>
+								<h3>Coding</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Lorem Ipsum</h3>
+								<span class="fa fa-desktop fa-3x"></span>
+								<h3>ML</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<span class="fa fa-train fa-3x"></span>
+								<h3>Exploring</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<span class="fa fa-users fa-3x"></span>
+								<h3>Networking</h3>
 							</li>
 						</ul>
 					</div>
@@ -78,9 +79,9 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2>My Intrests</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>My interests lie in continuously learning and exploring different domains, with a particular focus on AI and ML. I am committed to improving myself in these areas by staying updated with the latest advancements and applying my knowledge to real-world problems. Additionally, I am actively learning web development and enjoy experimenting with new technologies. This constant pursuit of knowledge and innovation drives me to seek out new challenges and opportunities for growth, ensuring that I stay at the forefront of technological advancements.</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
